--- a/Back/package.json
+++ b/Back/package.json
@@ -29,6 +29,7 @@
     "@nestjs/swagger": "^6.2.1",
     "@nestjs/typeorm": "^9.0.1",
     "@nestjs/websockets": "^9.3.9",
+    "axios": "^1.3.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "pg": "^8.9.0",
