--- a/Front/package.json
+++ b/Front/package.json
@@ -7,12 +7,16 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^1.3.3",
     "core-js": "^3.8.3",
     "node-sass": "^8.0.0",
     "sass": "^1.58.3",
+    "socket.io": "^4.6.0",
+    "socket.io-client": "^4.6.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
-    "vuex": "^4.0.0"
+    "vuex": "^4.0.0",
+    "ws": "^8.12.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
